feat(inte): inte header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="images/ohmyfood.png" alt="Logo Ohmyfood!">
+        <p>ohmyfood</p>
     </header>
 
     <main>
