--- a/index.html
+++ b/index.html
@@ -18,79 +18,95 @@
 
     <main>
 
-        <div class="location">
+        <section class="location">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
-        </div>
+        </section>
 
-        <div class="presentation">
+        <section class="presentation">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             <a class="button" href="#restaurants">Explorer nos restaurants</a>
-        </div>
+        </section>
 
         <!-- Use counter to set number in before, check link -->
-        <div class="manual">
+        <section class="manual">
             <h1>Fonctionnement</h1>
             <ul>
                 <li><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
                 <li><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
                 <li><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
             </ul>
-        </div>
+        </section>
 
-        <div id="restaurants">
+        <section class="restaurants">
             <h1>Restaurants</h1>
-            <div class="restaurants-list">
+            <div class="restaurants__list">
 
                 <article class="restaurant-card">
+                    <p class="new">Nouveau</p>
                     <a href="restaurant_la_palette_du_gout.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût" style="height: 100px;">
+                        <img class="restaurant-card__illustration" src="images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
                         <div class="restaurant-card__description">
-                            <h2>La palette du goût</h2>
-                            <p>Ménilmontant</p>
-                            <i class="fa-regular fa-heart"></i> <!-- On superpose puis on joue sur l'opcacité ? -->
-                            <p>Nouveau</p> <!-- Obligé de mettre un p ? -->
+                            <div class="restaurant-card__description--left">
+                                <h2>La palette du goût</h2>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <div class="restaurant-card__description--right">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
                         </div>
                     </a>
                 </article>
 
                 <article class="restaurant-card">
+                    <p class="new">Nouveau</p>
                     <a href="restaurant_la_note_enchantee.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/la_note_enchantee.jpg" alt="La note enchantée" style="height: 100px;">
+                        <img class="restaurant-card__illustration" src="images/restaurants/la_note_enchantee.jpg" alt="La note enchantée">
                         <div class="restaurant-card__description">
-                            <h2>La note enchantée</h2>
-                            <p>Charonne</p>
-                            <i class="fa-regular fa-heart"></i> <!-- On superpose puis on joue sur l'opcacité ? -->
-                            <p>Nouveau</p> <!-- Obligé de mettre un p ? -->
+                            <div class="restaurant-card__description--left">
+                                <h2>La note enchantée</h2>
+                                <p>Charonne</p>
+                            </div>
+                            <div class="restaurant-card__description--right">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
                         </div>
                     </a>
                 </article>
 
                 <article class="restaurant-card">
                     <a href="restaurant_a_la_francaise.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/a_la_francaise.jpg" alt="À la française" style="height: 100px;">
+                        <img class="restaurant-card__illustration" src="images/restaurants/a_la_francaise.jpg" alt="À la française">
                         <div class="restaurant-card__description">
-                            <h2>À la française</h2>
-                            <p>Cité Rouge</p>
-                            <i class="fa-regular fa-heart"></i> <!-- On superpose puis on joue sur l'opcacité ? -->
+                            <div class="restaurant-card__description--left">
+                                <h2>À la française</h2>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <div class="restaurant-card__description--right">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
                         </div>
                     </a>
                 </article>
 
                 <article class="restaurant-card">
                     <a href="restaurant_le_delice_des_sens.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens" style="height: 100px;">
+                        <img class="restaurant-card__illustration" src="images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
                         <div class="restaurant-card__description">
-                            <h2>Le délice des sens</h2>
-                            <p>Folie-Méricourt</p>
-                            <i class="fa-regular fa-heart"></i> <!-- On superpose puis on joue sur l'opcacité ? -->
+                            <div class="restaurant-card__description--left">
+                                <h2>Le délice des sens</h2>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <div class="restaurant-card__description--right">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
                         </div>
                     </a>
                 </article>
 
             </div>
-        </div>
+        </section>
 
     </main>
 
