--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <article class="restaurant-card">
                     <p class="new">Nouveau</p>
                     <a href="restaurant_la_palette_du_gout.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
+                        <img src="images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
                         <div class="restaurant-card__description">
                             <div class="restaurant-card__description--left">
                                 <h2>La palette du goût</h2>
@@ -59,10 +59,10 @@
                     </a>
                 </article>
 
-                <article class="restaurant-card">
+                <article class="restaurant-list">
                     <p class="new">Nouveau</p>
                     <a href="restaurant_la_note_enchantee.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/la_note_enchantee.jpg" alt="La note enchantée">
+                        <img src="images/restaurants/la_note_enchantee.jpg" alt="La note enchantée">
                         <div class="restaurant-card__description">
                             <div class="restaurant-card__description--left">
                                 <h2>La note enchantée</h2>
@@ -77,7 +77,7 @@
 
                 <article class="restaurant-card">
                     <a href="restaurant_a_la_francaise.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/a_la_francaise.jpg" alt="À la française">
+                        <img src="images/restaurants/a_la_francaise.jpg" alt="À la française">
                         <div class="restaurant-card__description">
                             <div class="restaurant-card__description--left">
                                 <h2>À la française</h2>
@@ -92,7 +92,7 @@
 
                 <article class="restaurant-card">
                     <a href="restaurant_le_delice_des_sens.html">
-                        <img class="restaurant-card__illustration" src="images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
+                        <img src="images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
                         <div class="restaurant-card__description">
                             <div class="restaurant-card__description--left">
                                 <h2>Le délice des sens</h2>
