--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </a>
                 </article>
 
-                <article class="restaurant-list">
+                <article class="restaurant-card">
                     <p class="new">Nouveau</p>
                     <a href="restaurant_la_note_enchantee.html">
                         <img src="images/restaurants/la_note_enchantee.jpg" alt="La note enchantée">
