--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>ohmyfood</h1>
     </header>
 
-    <main>
+    <main class="home">
 
         <section class="location">
             <i class="fas fa-map-marker-alt"></i>
