feat(inte): add link to ohmy, fix some with

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <h1><a href="index.html">ohmyfood</a></h1>
     </header>
 
     <main class="home">
@@ -111,7 +111,7 @@
     </main>
 
     <footer>
-        <p>ohmyfood</p> <!-- Maybe use svg or police -->
+        <p><a href="index.html">ohmyfood</a></p>
         <ul>
             <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
