--- a/restaurant_la_note_enchantee.html
+++ b/restaurant_la_note_enchantee.html
@@ -218,7 +218,7 @@
     </main>
 
     <footer>
-        <p>ohmyfood</p> <!-- Maybe use svg or police -->
+        <p><a href="index.html">ohmyfood</a></p>
         <ul>
             <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
