feat(inte): add annimations

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="loader-container">
+        <div class="loader-to-animate">
+            <div>
+                <div>
+                    <div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p>Recherche des restaurants</p>
+    </div>
+
     <header>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
