feat(inte): add anchor

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
         </section>
 
-        <section class="restaurants">
+        <section class="restaurants" id="restaurants">
             <h1>Restaurants</h1>
             <div class="restaurants__list">
 
