feat(inte): add all animation and responsive big device

--- a/restaurant_la_note_enchantee.html
+++ b/restaurant_la_note_enchantee.html
@@ -21,7 +21,7 @@
         <img class="restaurant__illustration" src="images/restaurants/la_note_enchantee.jpg" alt="La note enchantée">
         <div class="restaurant__title">
             <h1>La note enchantée</h1>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
             <h2>ENTRÉES</h2>
