--- a/restaurant_le_delice_des_sens.html
+++ b/restaurant_le_delice_des_sens.html
@@ -21,7 +21,7 @@
         <img class="restaurant__illustration" src="images/restaurants/le_delice_des_sens.jpg" alt="Le délice des sens">
         <div class="restaurant__title">
             <h1>La palette du goût</h1>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
             <h2>ENTRÉES</h2>
