--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
         </section>
 
-        <section class="restaurants">
+        <section id="restaurants" class="restaurants">
             <h1>Restaurants</h1>
             <div class="restaurants__list">
 
@@ -65,7 +65,7 @@
                                 <p>Ménilmontant</p>
                             </div>
                             <div class="restaurant-card__description--right">
-                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
                             </div>
                         </div>
                     </a>
@@ -81,7 +81,7 @@
                                 <p>Charonne</p>
                             </div>
                             <div class="restaurant-card__description--right">
-                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
                             </div>
                         </div>
                     </a>
@@ -96,7 +96,7 @@
                                 <p>Cité Rouge</p>
                             </div>
                             <div class="restaurant-card__description--right">
-                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
                             </div>
                         </div>
                     </a>
@@ -111,7 +111,7 @@
                                 <p>Folie-Méricourt</p>
                             </div>
                             <div class="restaurant-card__description--right">
-                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
                             </div>
                         </div>
                     </a>
