--- a/restaurant_a_la_francaise.html
+++ b/restaurant_a_la_francaise.html
@@ -21,7 +21,7 @@
         <img class="restaurant__illustration" src="images/restaurants/a_la_francaise.jpg" alt="À la française">
         <div class="restaurant__title">
             <h1>À la française</h1>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
             <h2>ENTRÉES</h2>
