--- a/restaurant_la_palette_du_gout.html
+++ b/restaurant_la_palette_du_gout.html
@@ -21,7 +21,7 @@
         <img class="restaurant__illustration" src="images/restaurants/la_palette_du_gout.jpg" alt="La palette du goût">
         <div class="restaurant__title">
             <h1>La palette du goût</h1>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
             <h2>ENTRÉES</h2>
