--- a/restaurant_a_la_francaise.html
+++ b/restaurant_a_la_francaise.html
@@ -14,7 +14,7 @@
 <body>
     <header class="--with-home-link">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
+        <h1><a href="index.html">ohmyfood</a></h1>
     </header>
 
     <main class="restaurant">
