feat(inte): end responsive and animation

--- a/restaurant_la_note_enchantee.html
+++ b/restaurant_la_note_enchantee.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="--with-home-link">
+    <header class="header--with-home-link">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
@@ -24,192 +24,200 @@
             <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
-            <h2>ENTRÉES</h2>
+            <div class="restaurant__menu--list">
+                <section>
+                    <h2>ENTRÉES</h2>
 
-            <div class="dishes-list">
+                    <div class="dishes-list">
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Ravioles de foie gras</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Accompagnés de leur crème à la truffe
-                            </p>
-                            <p>
-                                <strong>25€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Ravioles de foie gras</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Accompagnés de leur crème à la truffe
+                                    </p>
+                                    <p>
+                                        <strong>25€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Caviar osciètre</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Sur blini à la farine de blé noir
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Caviar osciètre</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Sur blini à la farine de blé noir
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Homard et espuma de potiron</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Mariné aux zestes d'orange
-                            </p>
-                            <p>
-                                <strong>20€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Homard et espuma de potiron</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Mariné aux zestes d'orange
+                                    </p>
+                                    <p>
+                                        <strong>20€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Confiture de figue et pain toasté
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Foie gras de canard cuit entier</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Confiture de figue et pain toasté
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>PLATS</h2>
 
-            <h2>PLATS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Sur lit de purée de céleri-rave
-                            </p>
-                            <p>
-                                <strong>40€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Noix de coquilles Saint-Jacques</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Sur lit de purée de céleri-rave
+                                    </p>
+                                    <p>
+                                        <strong>40€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Langoustine poêlée</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Purée de patate douce
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Langoustine poêlée</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Purée de patate douce
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Mijoté de queue de boeuf </h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et riz sauvage aux zestes de citron
-                            </p>
-                            <p>
-                                <strong>44€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Mijoté de queue de boeuf </h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et riz sauvage aux zestes de citron
+                                    </p>
+                                    <p>
+                                        <strong>44€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>DESSERTS</h2>
 
-            <h2>DESSERTS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Glace au caramel brun et sel de Guérande
-                            </p>
-                            <p>
-                                <strong>18€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Macaron noisette et chocolat</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Glace au caramel brun et sel de Guérande
+                                    </p>
+                                    <p>
+                                        <strong>18€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Baba au rhum revisité </h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Avec son coulis de citron
-                            </p>
-                            <p>
-                                <strong>22€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Baba au rhum revisité </h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Avec son coulis de citron
+                                    </p>
+                                    <p>
+                                        <strong>22€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Tarte au citron meringuée </h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Déstructurée
-                            </p>
-                            <p>
-                                <strong>23€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Tarte au citron meringuée </h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Déstructurée
+                                    </p>
+                                    <p>
+                                        <strong>23€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
+                    </div>
+                </section>
             </div>
 
             <a class="button" href="#restaurants">Commander</a>
