--- a/restaurant_la_palette_du_gout.html
+++ b/restaurant_la_palette_du_gout.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="--with-home-link">
+    <header class="header--with-home-link">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
@@ -24,175 +24,183 @@
             <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
-            <h2>ENTRÉES</h2>
+            <div class="restaurant__menu--list">
+                <section>
+                    <h2>ENTRÉES</h2>
 
-            <div class="dishes-list">
+                    <div class="dishes-list">
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Fricassée d'escargot</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Au piment d'espelette
-                            </p>
-                            <p>
-                                <strong>25€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Fricassée d'escargot</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Au piment d'espelette
+                                    </p>
+                                    <p>
+                                        <strong>25€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et ses copeaux de truffe noire
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Foie gras de canard mi-cuit</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et ses copeaux de truffe noire
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Oeuf au plat</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Assaisonné à la truffe sur lit de caviar
-                            </p>
-                            <p>
-                                <strong>20€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Oeuf au plat</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Assaisonné à la truffe sur lit de caviar
+                                    </p>
+                                    <p>
+                                        <strong>20€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>PLATS</h2>
 
-            <h2>PLATS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Filet de boeuf aux herbes</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Accompagné de sa ribambelle de légumes
-                            </p>
-                            <p>
-                                <strong>40€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Filet de boeuf aux herbes</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Accompagné de sa ribambelle de légumes
+                                    </p>
+                                    <p>
+                                        <strong>40€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Parmentier de queue de boeuf</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                À la truffe noire sur sa purée de panais
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Parmentier de queue de boeuf</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        À la truffe noire sur sa purée de panais
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Filet de turbot</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Aux agrumes
-                            </p>
-                            <p>
-                                <strong>44€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Filet de turbot</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Aux agrumes
+                                    </p>
+                                    <p>
+                                        <strong>44€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>DESSERTS</h2>
 
-            <h2>DESSERTS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Paris-Brest</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Revisité
-                            </p>
-                            <p>
-                                <strong>22€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Paris-Brest</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Revisité
+                                    </p>
+                                    <p>
+                                        <strong>22€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Macaron au chocolat d'exception</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et glace à la vanille de Madagascar
-                            </p>
-                            <p>
-                                <strong>22€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Macaron au chocolat d'exception</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et glace à la vanille de Madagascar
+                                    </p>
+                                    <p>
+                                        <strong>22€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Mousse au chocolat</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Au piment d'Espelette et à la truffe noire
-                            </p>
-                            <p>
-                                <strong>23€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Mousse au chocolat</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Au piment d'Espelette et à la truffe noire
+                                    </p>
+                                    <p>
+                                        <strong>23€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
+                    </div>
+                </section>
             </div>
 
             <a class="button" href="#restaurants">Commander</a>
