--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
 
     <main class="home">
 
-        <section class="location">
+        <div class="location">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
-        </section>
+        </div>
 
         <section class="presentation">
-            <h1>Réservez le menu qui vous convient</h1>
+            <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             <a class="button" href="#restaurants">Explorer nos restaurants</a>
         </section>
 
-        <!-- Use counter to set number in before, check link -->
         <section class="manual">
-            <h1>Fonctionnement</h1>
+            <h2>Fonctionnement</h2>
             <ul>
                 <li><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
                 <li><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
@@ -52,7 +51,7 @@
         </section>
 
         <section id="restaurants" class="restaurants">
-            <h1>Restaurants</h1>
+            <h2>Restaurants</h2>
             <div class="restaurants__list">
 
                 <article class="restaurant-card">
