--- a/restaurant_a_la_francaise.html
+++ b/restaurant_a_la_francaise.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="--with-home-link">
+    <header class="header--with-home-link">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
@@ -24,175 +24,183 @@
             <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
-            <h2>ENTRÉES</h2>
+            <div class="restaurant__menu--list">
+                <section>
+                    <h2>ENTRÉES</h2>
 
-            <div class="dishes-list">
+                    <div class="dishes-list">
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Aux zestes d'orange
-                            </p>
-                            <p>
-                                <strong>25€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Tartare de poulpe acidulé</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Aux zestes d'orange
+                                    </p>
+                                    <p>
+                                        <strong>25€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Carotte, panais, topinambour
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Velouté de légumes d'antan</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Carotte, panais, topinambour
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Soupe à l'oignon</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Revisitée
-                            </p>
-                            <p>
-                                <strong>20€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Soupe à l'oignon</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Revisitée
+                                    </p>
+                                    <p>
+                                        <strong>20€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>PLATS</h2>
 
-            <h2>PLATS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Accompagnées d'une purée de panais
-                            </p>
-                            <p>
-                                <strong>40€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Coquilles Saint-Jacques</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Accompagnées d'une purée de panais
+                                    </p>
+                                    <p>
+                                        <strong>40€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Magret de canard</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et parmentier de pommes de terre
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Magret de canard</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et parmentier de pommes de terre
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Sur son lit de gnocchis aux légumes
-                            </p>
-                            <p>
-                                <strong>44€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Sur son lit de gnocchis aux légumes
+                                    </p>
+                                    <p>
+                                        <strong>44€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>DESSERTS</h2>
 
-            <h2>DESSERTS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Pétales de violettes glacés</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et purée de noisettes
-                            </p>
-                            <p>
-                                <strong>18€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Pétales de violettes glacés</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et purée de noisettes
+                                    </p>
+                                    <p>
+                                        <strong>18€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Fondant au chocolat</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Revisité
-                            </p>
-                            <p>
-                                <strong>22€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Fondant au chocolat</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Revisité
+                                    </p>
+                                    <p>
+                                        <strong>22€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Millefeuille croustillantt</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Myrtilles et pâte d’amande
-                            </p>
-                            <p>
-                                <strong>23€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Millefeuille croustillantt</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Myrtilles et pâte d’amande
+                                    </p>
+                                    <p>
+                                        <strong>23€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
+                    </div>
+                </section>
             </div>
 
             <a class="button" href="#restaurants">Commander</a>
