--- a/restaurant_le_delice_des_sens.html
+++ b/restaurant_le_delice_des_sens.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="--with-home-link">
+    <header class="header--with-home-link">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
@@ -24,175 +24,183 @@
             <i class="fa-regular fa-heart"><i class="fa-regular fa-heart"></i></i>
         </div>
         <div class="restaurant__menu">
-            <h2>ENTRÉES</h2>
+            <div class="restaurant__menu--list">
+                <section>
+                    <h2>ENTRÉES</h2>
 
-            <div class="dishes-list">
+                    <div class="dishes-list">
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Tartare de thon</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Assaisonné au yuzu
-                            </p>
-                            <p>
-                                <strong>25€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Tartare de thon</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Assaisonné au yuzu
+                                    </p>
+                                    <p>
+                                        <strong>25€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Bouchée de homard croustillant</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et sa farandole de petits légumes
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Bouchée de homard croustillant</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et sa farandole de petits légumes
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Velouté de cèpes </h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Aux truffes
-                            </p>
-                            <p>
-                                <strong>20€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Velouté de cèpes </h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Aux truffes
+                                    </p>
+                                    <p>
+                                        <strong>20€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>PLATS</h2>
 
-            <h2>PLATS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Poulet rôti aux herbes de Provence</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et sa crème de truffe
-                            </p>
-                            <p>
-                                <strong>40€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Poulet rôti aux herbes de Provence</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et sa crème de truffe
+                                    </p>
+                                    <p>
+                                        <strong>40€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Langouste rôtie</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et ses légumes de saison
-                            </p>
-                            <p>
-                                <strong>35€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Langouste rôtie</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et ses légumes de saison
+                                    </p>
+                                    <p>
+                                        <strong>35€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Côte de boeuf Angus </h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Et sa purée de panais
-                            </p>
-                            <p>
-                                <strong>44€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Côte de boeuf Angus </h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Et sa purée de panais
+                                    </p>
+                                    <p>
+                                        <strong>44€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
+
                     </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
+                </section>
 
-            </div>
+                <section>
+                    <h2>DESSERTS</h2>
 
-            <h2>DESSERTS</h2>
+                    <div class="dishes-list">
 
-            <div class="dishes-list">
-
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Farandole de desserts</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Du chef
-                            </p>
-                            <p>
-                                <strong>18€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Farandole de desserts</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Du chef
+                                    </p>
+                                    <p>
+                                        <strong>18€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Crème brulée</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                Revisitée
-                            </p>
-                            <p>
-                                <strong>22€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Crème brulée</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        Revisitée
+                                    </p>
+                                    <p>
+                                        <strong>22€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
-                <div class="dishe">
-                    <div class="dishe__description">
-                        <h3>Tiramisu</h3>
-                        <div class="dishe__description--complement">
-                            <p class="ellipsis">
-                                À la noisette
-                            </p>
-                            <p>
-                                <strong>23€</strong>
-                            </p>
+                        <div class="dishe">
+                            <div class="dishe__description">
+                                <h3>Tiramisu</h3>
+                                <div class="dishe__description--complement">
+                                    <p class="ellipsis">
+                                        À la noisette
+                                    </p>
+                                    <p>
+                                        <strong>23€</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="dishe__check">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dishe__check">
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
 
+                    </div>
+                </section>
             </div>
 
             <a class="button" href="#restaurants">Commander</a>
